Kubernetes/mongodb.yml
# mongoDB Stateful Set
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-deployment
  namespace: wanderlust
  labels:
    app: mongodb
spec:
  serviceName: mongodb-service
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc

---
# MongoDB Service
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: wanderlust
spec:
  type: ClusterIP # As we 
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
